--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,6 +29,7 @@ jobs:
         source /opt/ros/noetic/setup.bash
         cd ${CATKIN_WS}/src/OpenHRC
         git submodule update --init --recursive
+        sudo apt install libx11-xcb-dev libxcb-dri2-0-dev libxcb-glx0-dev libxcb-icccm4-dev libxcb-keysyms1-dev libxcb-randr0-dev
         rosdep update
         rosdep install -i -y --from-paths ./ 
 
