--- a/ohrc_perception/config/ft_sensor_filter.yaml
+++ b/ohrc_perception/config/ft_sensor_filter.yaml
@@ -1,16 +1,17 @@
 
 # ft_sensor_filter:
 
+  rate: 500.0
   topic_name:
-    raw: "/force"
-    filtered: "/force2"
+    raw: "ft_sensor/raw"
+    filtered: "ft_sensor/filtered"
 
   cutoff_freq: 50.0
   lpf_order: 2
   deadzone:
     force:
-      lower: -0.01
-      upper: 0.01
+      lower: -0.1
+      upper: 0.1
     torque:
       lower: -0.1
       upper: 0.1
