add trajectory generation service

--- a/ohrc_automation/package.xml
+++ b/ohrc_automation/package.xml
@@ -45,6 +45,7 @@
   <exec_depend>roscpp</exec_depend>
 
   <depend>ohrc_control</depend>
+  <depend>ohrc_msgs</depend>
 
   <depend>osqp</depend>
   <depend>osqp-eigen</depend>
