--- a/ohrc_hw_config/ur5e_toroboarm/ur5e_control_config_vel.yaml
+++ b/ohrc_hw_config/ur5e_toroboarm/ur5e_control_config_vel.yaml
@@ -20,6 +20,8 @@ control_freq: 500.0
 follower_list: # robot namespace list. They should be unique. ("") means the robot has no namespace
   ur5e: # robot config name
     - "" # robot namespace
+  toroboarm:
+    -"toroboarm_1"
 
 
 priority: "Manual" #"Automation" #  (for multi-follower)
