--- a/ohrc_hw_config/fetch/fetch_control_config_pos_trj.yaml
+++ b/ohrc_hw_config/fetch/fetch_control_config_pos_trj.yaml
@@ -1,10 +1,7 @@
-chain_start: "base_link" # base frame of commands
-chain_end: "gripper_link" # target eff frame
+
 root_frame: "base_link" # IK calculation base frame (for multi-follower)
 
 controller: "Position" # "Position" or "Velocity"
-publisher: "TrajectoryAction" # "Position" or "Velocity" or "Trajectory" or "TrajectoryAction"
-topic_namespace: "arm_with_torso_controller"
 
 solver: "MyIK"
 
@@ -12,19 +9,10 @@ self_collision_avoidance: true
 
 control_freq: 50.0
 
-initIKAngle: [0, 0., 0, 0, 0, 0, 0, 0] # size of this should be equal to DoF
-initial_pose: [0.2, 0.3, 1.1, 0, 0, 0] # [x, y, z, roll, pitch, yaw]
-
 follower_list: # robot namespace list. They should be unique. ("") means the robot has no namespace
-  - ""
-  # - "toroboarm_2"
-  # - "toroboarm_3"
-  # - "toroboarm_4"
-  # - "toroboarm_5"
-  # - "toroboarm_6"
-  # - "toroboarm_7"
-  # - "toroboarm_8"
-  # - "toroboarm_9"
+  fetch:
+    - ""
+
 
 priority: "Manual" #"Automation" #  (for multi-follower)
 MF_mode: "Individual" #"Parallel" #   (for multi-follower)
