--- a/ohrc_hw_config/ur5e_toroboarm/ur5e_toroboarm_control_config_vel.yaml
+++ b/ohrc_hw_config/ur5e_toroboarm/ur5e_toroboarm_control_config_vel.yaml
@@ -21,9 +21,9 @@ follower_list: # robot namespace list. They should be unique. ("") means the rob
   ur5e: # robot config name
     - "" # robot namespace
   toroboarm:
-    -"toroboarm_1"
+    - "toroboarm_1"
 
 
 priority: "Manual" #"Automation" #  (for multi-follower)
 MF_mode: "Individual" #"Parallel" #   (for multi-follower)
-IK_mode: "Order" # (for multi-follower)
+IK_mode: "Concatenated" #"Order" # (for multi-follower)
