--- a/ohrc_imitation_learning/CMakeLists.txt
+++ b/ohrc_imitation_learning/CMakeLists.txt
@@ -128,24 +128,24 @@ ${catkin_INCLUDE_DIRS}
 # add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-## With catkin_make all packages are built within a single CMake context
-## The recommended prefix ensures that target names across packages don't collide
-add_executable(trigger src/trigger.cpp)
+# ## With catkin_make all packages are built within a single CMake context
+# ## The recommended prefix ensures that target names across packages don't collide
+# add_executable(trigger src/trigger.cpp)
 
-## Rename C++ executable without prefix
-## The above recommended prefix causes long target names, the following renames the
-## target back to the shorter version for ease of user use
-## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
+# ## Rename C++ executable without prefix
+# ## The above recommended prefix causes long target names, the following renames the
+# ## target back to the shorter version for ease of user use
+# ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
+# # set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
-## Add cmake target dependencies of the executable
-## same as for the library above
-add_dependencies(trigger ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# ## Add cmake target dependencies of the executable
+# ## same as for the library above
+# add_dependencies(trigger ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-## Specify libraries to link a library or executable target against
-target_link_libraries(trigger
-  ${catkin_LIBRARIES}
-)
+# ## Specify libraries to link a library or executable target against
+# target_link_libraries(trigger
+#   ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
