fix CATKIN_DEPENDS in ohrc_teleoperation

--- a/ohrc_teleoperation/CMakeLists.txt
+++ b/ohrc_teleoperation/CMakeLists.txt
@@ -109,9 +109,8 @@ find_package(magic_enum CONFIG REQUIRED)
 # # DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES ohrc_teleoperation ohrc_control ohrc_common
-  CATKIN_DEPENDS roscpp
-
+  LIBRARIES ohrc_teleoperation
+  CATKIN_DEPENDS roscpp ohrc_control ohrc_common
   # DEPENDS system_lib
 )
 
