--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,8 +44,45 @@ jobs:
         cd ${CATKIN_WS}
         catkin test
         
-
   docker_build:
+    runs-on: ubuntu-latest
+    env:
+      WS: /home/runner/work
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Init workspace
+      run: |
+        source /opt/ros/noetic/setup.bash
+        mkdir -p ${CATKIN_WS}/src
+        ln -s ${GITHUB_WORKSPACE} ${CATKIN_WS}/src/
+
+    - name: install docker engine
+      run: |
+        sudo apt install -y curl
+        curl -s curl -s https://raw.githubusercontent.com/itadera/OpenHRC/use_docker_rocker/install-docker-rocker.sh | /bin/bash
+        rocker --nvidia --x11 --user --home osrf/ros:noetic-desktop-full
+
+    - name: pre build
+      run: |
+        cd ${CATKIN_WS}/src/OpenHRC
+        git submodule update --init --recursive
+        rosdep update
+        rosdep install -i -y --from-paths ./ 
+
+    - name: build
+      run: |
+        source /opt/ros/noetic/setup.bash
+        cd ${CATKIN_WS}
+        catkin build
+
+    - name: test
+      run: |
+        source /opt/ros/noetic/setup.bash
+        cd ${CATKIN_WS}
+        catkin test
+
+  docker_vnc_build:
     runs-on: ubuntu-latest
     env:
       WS: /home/runner/work
@@ -55,7 +92,7 @@ jobs:
     - name: install docker engine
       run: |
         sudo apt install -y curl
-        curl -s https://raw.githubusercontent.com/karaage0703/ubuntu-setup/master/install-docker.sh | /bin/bash
+        curl -s curl -s https://raw.githubusercontent.com/itadera/OpenHRC/use_docker_rocker/install-docker-rocker.sh | /bin/bash
         sudo service docker start
 
     - name: init ws
