--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -73,7 +73,7 @@ jobs:
         
     - name: build on docker
       run: |
-        rocker --name test --user --home osrf/ros:noetic-desktop-full
+        rocker --privileged --name test --user --home osrf/ros:noetic-desktop-full
         docker ps -a
         docker exec test /bin/bash `cd ${CATKIN_WS}/src/OpenHRC && rosdep update && rosdep install -i -y --from-paths ./ && cd ${CATKIN_WS} && catkin build && catkin test`
 
