modified:   ohrc_hw_config/crane_x7/crane_x7_hw_config.yaml

--- a/ohrc_hw_config/crane_x7/crane_x7_control_config_vel_trj.yaml
+++ b/ohrc_hw_config/crane_x7/crane_x7_control_config_vel_trj.yaml
@@ -6,7 +6,7 @@ controller: "Velocity" # "Position" or "Velocity"
 
 solver: "MyIK"
 
-self_collision_avoidance: true
+self_collision_avoidance: false
 
 control_freq: 30.0
 
