--- a/ohrc_hw_config/toroboarm/toroboarm_control_config_vel.yaml
+++ b/ohrc_hw_config/toroboarm/toroboarm_control_config_vel.yaml
@@ -21,4 +21,7 @@ follower_list: # robot namespace list. They should be unique. if you ("") means 
 
 priority: "Manual" #"Automation" #  (for multi-follower)
 MF_mode: "Parallel" # "Individual" #  (for multi-follower)
-IK_mode:  "Concatenated" #"Order" # (for multi-follower)
+
+# Type of solving IK. "Concatenated" mode solve IK for all robots at once. "Order" mode solve IK for each robot in order. "Parallel" mode solve IK for all robots in multi thread.
+# When you operate single robot, "Concatenated" mode is equivalent to "Order" mode.
+IK_mode: "Concatenated" # "Order" # "Parallel" #
