--- a/ohrc_hw_config/ur5e/ur5e_control_config_vel_trj.yaml
+++ b/ohrc_hw_config/ur5e/ur5e_control_config_vel_trj.yaml
@@ -1,35 +1,31 @@
-chain_start: "base_link" # base frame of commands
-chain_end: "tool0" # target eff frame
-root_frame: "base_link" # IK calculation base frame (for multi-follower)
+# chain_start: "base_link" # base frame of commands
+# chain_end: "tool0" # target eff frame
+root_frame: "world" # IK calculation base frame (for multi-follower)
 
 controller: "Velocity" # "Position" or "Velocity"
-publisher: "Trajectory" # "Position" or "Velocity" or "Trajectory" or "TrajectoryAction"
-topic_namespace: "eff_joint_traj_controller"
+# publisher: "Velocity" # "Position" or "Velocity" or "Trajectory" or "TrajectoryAction"
+# topic_namespace: "joint_group_vel_controller"
 
 solver: "MyIK"
 
 self_collision_avoidance: true
 
-control_freq: 30.0
+control_freq: 50.0
 
-initIKAngle: [0, -1.5, 2., -2., -1.5, 0] # size of this should be equal to DoF
-initial_pose: [0.45, 0.0, 0.3, 3.141592, 0, 0] # [x, y, z, roll, pitch, yaw]
+# initIKAngle: [0, -1., 2., -2.5, -1.5, 0] # size of this should be equal to DoF
+
+# # initial_pose_frame: test # default frame is same as chain_start
+# initial_pose: [0.35, 0.0, 0.3, 3.141592, 0, 0] # [x, y, z, roll, pitch, yaw]
 
 follower_list: # robot namespace list. They should be unique. ("") means the robot has no namespace
-  - ""
-  # - "toroboarm_2"
-  # - "toroboarm_3"
-  # - "toroboarm_4"
-  # - "toroboarm_5"
-  # - "toroboarm_6"
-  # - "toroboarm_7"
-  # - "toroboarm_8"
-  # - "toroboarm_9"
+  ur5e: # robot config name
+    - "" # robot namespace
+
 
 priority: "Manual" #"Automation" #  (for multi-follower)
-MF_mode: "Individual" #"Parallel" #   (for multi-follower)
+MF_mode: "Individual"  #  (for multi-follower)
+
 
 # Type of solving IK. "Concatenated" mode solve IK for all robots at once. "Order" mode solve IK for each robot in order. "Parallel" mode solve IK for all robots in multi thread.
 # When you operate single robot, "Concatenated" mode is equivalent to "Order" mode.
 IK_mode: "Concatenated" # "Order" # "Parallel" #
-
