--- a/ohrc_common/package.xml
+++ b/ohrc_common/package.xml
@@ -49,6 +49,7 @@
 
   <build_depend>geometry_msgs</build_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>python-is-python3</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
