--- a/ohrc_perception/CMakeLists.txt
+++ b/ohrc_perception/CMakeLists.txt
@@ -128,6 +128,7 @@ include_directories(
 set(singles
   ft_filter
   body_state_visualizer
+  # body_state_prediction
   # k4abt_body_state_publisher
 )
 
